--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.cst438</groupId>
-	<artifactId>Assignment2</artifactId>
+	<artifactId>Assignment2_07</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Lab3</name>
 	<description>cst438 assignment 2</description>
@@ -42,11 +42,16 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-crypto</artifactId>
-			<version>3.1.0.RELEASE</version>
-		</dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+            <version>6.2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>4.18.1</version>
+        </dependency>
 	</dependencies>
 
 	<build>
@@ -74,7 +79,7 @@
 				<enabled>false</enabled>
 			</releases>
 		</repository>
-	</repositories>
+    </repositories>
 	<pluginRepositories>
 		<pluginRepository>
 			<id>spring-milestones</id>
