--- a/pom.xml
+++ b/pom.xml
@@ -47,11 +47,23 @@
             <artifactId>spring-security-crypto</artifactId>
             <version>6.2.2</version>
         </dependency>
+        <!-- for selenium -->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
             <version>4.18.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-api</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-devtools-v122</artifactId>
+            <version>4.18.1</version>
+        </dependency>
+        <!-- end selenium -->
 	</dependencies>
 
 	<build>
