--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
             <version>4.18.1</version>
         </dependency>
         <!-- end selenium -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
 	</dependencies>
 
 	<build>
