--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,19 @@
             <artifactId>gson</artifactId>
             <version>2.10.1</version>
         </dependency>
-	</dependencies>
+        <!-- for rabbitmq -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.amqp</groupId>
+            <artifactId>spring-rabbit-test</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <!-- end rabbitmq -->
+
+    </dependencies>
 
 	<build>
 		<plugins>
